--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "paths": {
       "@api/*": ["api/*"],
       "@common/*": ["src/app/common/*"],
+      "@components/*": ["src/app/components/*"],
       "@environments/*": ["src/environments/*"],
       "@services/*": ["src/app/services/*"]
     },
